# Fractal-Designer

./: .gitignore  devshell.toml  flake.nix  flake.nixbackup  graphics.py  nohup.out  pyproject.toml
fractal_designer/: IFS.py  __main__.py  actions.py  app.css  app.py  graphics.py  plot.py  types.py  widgets.py
fractal_designer/css/: app.css  app.min.css
fractal_designer/js/: app.js  app.min.js
fractal_designer/mathjax/: constants.py
fractal_designer/menu_window/: menus.py
fractal_designer/mixins/: transformer.py
fractal_designer/shapes/: sierpinski_triangle.py  square.py
fractal_designer/shiny_test/: app.py  app_core.py
fractal_designer/transformers/: polygon_transformer.py  transformer.py
fractal_designer/windows/: design.py  fractal.py  home.py  matrix.py  menu.py  window.py
