[project]
name = "lab-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pyside6>=6.10.0",
    "pyside6-essentials>=6.10.0",
    "pyside6-stubs>=6.7.3.0",
    "requests>=2.32.5",
    "shiny>=1.5.0",
]

[tool.ruff]
line-length = 120
